@@ -19,7 +19,7 @@ y <- 7 * mpfr(1:12, 80)
 my <- y
 dim(my) <- 3:4
 m.y <- matrix(7 * 1:12, 3,4)
-stopifnot(identical(m2, mpfr(m.x, 64)),
+stopifnot(all.equal(m2, mpfr(m.x, 64), tol=0), # not identical(..)
 	  my[2,2] == 35,
 	  my[,1] == 7*(1:3))
 
